--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <title>Hello World</title>
 </head>
 <body>
-  <main>
-    <h1>Hello, World!</h1>
-  </main>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
